<resources>
    <string name="app_name">NewWeather</string>
    <string name="action_settings">Settings</string>
    <string name="change_city">Change City</string>

    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzly">&#xf01c;</string>
    <string name="new_city">New City</string>
    <string name="go_back">Go Back</string>
    <string name="forecast">Forecast</string>
    <string name="input_new_city">Input new city</string>
    <string name="hint_Input">Input New city</string>
    <string name="go_back2">Go back</string>
    <string name="dark_theme">Dark theme</string>
    <string name="bright_theme">Bright theme</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="setlanguage">Language</string>
    <string name="settheme">Theme</string>
    <string name="bonus">Bonus</string>
    <string name="rgb_game">RGB-Game</string>
    <string name="maze">Maze</string>


    <string name="No_game1">No games in freeware version</string>
    <string name="No_game3">No games in freeware version</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Header">The Header</string>
    <string name="HeaderName">My new weather</string>
    <string name="e_mail">vasic2000@yandex.ru</string>

    <string name="About">Vasiliy Chernov. Leed engineer in OEM manufacturing of refrigerant technic. Programming - is hobby now. I\'ve got experience in VBA. That moment I\'m trying to change my hobby into a new profession. First goal - Android developing. Second fnd next goals - find myself in game developing for mobile devices: Androidm, IOS, something new in future.</string>
    <string name="Developer">About</string>
    <string name="feedback">Connect:</string>
    <string name="mail">e-mail: vasic2000@yandex.ru</string>
    <string name="telegramm">telegramm: @Vasyator</string>
    <string name="about_developer">About developer</string>
    <string name="feedback2">Feedback</string>
    <string name="sensors">Sensors</string>
    <string name="title_temperature">Temperature sensor</string>
    <string name="title_humidity">Relative humidity sensor</string>
    <string name="sensors2">Sensors</string>
    <string name="temperature2">Temperature</string>
    <string name="humidity2">Humidity</string>
    <string name="relative_humidity">Relative humidity</string>
    <string name="temperature">Temperature</string>
    <string name="no_sensor">No sensor!</string>
    <string name="netork_failure">Internet error</string>
    <string name="wrong_answer">Wrong answer</string>

</resources>
