<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.vasic2000.newweather.Activities.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_change_city"
        android:title="@string/change_city"
        app:showAsAction="never"/>
    <item
    android:id="@+id/action_about"
    android:title="@string/about_developer"
    app:showAsAction="never" />
    <item
        android:id="@+id/action_feedback"
        android:title="@string/feedback2"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_additions"
        android:title="@string/sensors"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_t_sensor"
                android:title="@string/title_temperature"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_h_sensor"
                android:title="@string/title_humidity"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>
